--- a/css/styles.css
+++ b/css/styles.css
@@ -55,7 +55,7 @@ ul {
     margin: 0 auto;
 }
 .title {
-    /* color: var(--primary-text-color); */   
+    color: var(--primary-text-color);    
     font-weight: 700;
     font-size: 36px;
     line-height: 1.67;
@@ -157,8 +157,12 @@ footer {
     padding-bottom: 94px;
 }
 .benefits .title {
-   display: none;
-   color: aquamarine;
+    position: absolute;
+    clip: rect (0000);
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    opacity: 0;
 }
 .benefits-list {
     display: flex;  
@@ -217,8 +221,14 @@ footer {
     padding-top: 84px;
     padding-bottom: 94px;
 }
-.team .title {
-    margin-bottom: 44px;
+.team-title {
+    color: var(--primary-text-color);    
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.67;
+    text-align: center;
+    letter-spacing: 0.03em;
+    margin-bottom: 40px;
 }
 .team-list {
     display: flex;
@@ -226,11 +236,14 @@ footer {
 }
 .team-list-item {
     background-color: var(--primary-fon-color);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
 }
 .team-list-item-last {
     background-color: var(--primary-fon-color);
 }
 .team-content{
+    margin-bottom: 16px;
     font-size: 16px;
     line-height: 1.18;
     color: var(--secondary-text-color);
@@ -238,15 +251,15 @@ footer {
 .team-card {
     display: block;
     padding-top: 26px;
-    padding-bottom: 30px;
+    padding-bottom: 26px;
     text-align: center;
 }
 .team-media-link {
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    width: 44px;
-    height: 44px;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
 }
 .team-media {
@@ -293,8 +306,12 @@ footer {
 /*portfolio*/
 
 .visually {
-    display: none;
-    justify-content: center;
+    position: absolute;
+    clip: rect (0000);
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    opacity: 0;
 }
 .works {
     display: flex;
